Added responsiveness in the template

--- a/pro_farm/templates/new_lang_select.html
+++ b/pro_farm/templates/new_lang_select.html
@@ -42,22 +42,22 @@
         </div>
         <div class="content">
             <small>Welcome to our kissan tech</small>
-            <h1>Choose your 
-                <div class="right_text">
-                    अपनी भाषा
+            <div class="row">
+                <div class="col-md-4 col-sm-3">
+                    <h1>Choose your Language</h1> 
                 </div>
-                <br>
-                Language
-                <div class="right_text_2">
-                    चुनें
+                <div class="col-md-7 col-sm-7">
+                    <div class="right_text">अपनी भाषा चुनें</div>
                 </div>
-            </h1>
-            <button type="button">English</button>
-            <button type="button">Hindi</button>
-            <button type="button">Haryanvi</button> <br>
-            <button type="button">Telugu</button>
-            <button type="button">Punjabi</button>
-            <button type="button">Tamil</button>
+            </div>
+            <div class="mybuttons">
+                <button type="button">English</button>
+                <button type="button">Hindi</button>
+                <button type="button">Haryanvi</button> <br>
+                <button type="button">Telugu</button>
+                <button type="button">Punjabi</button>
+                <button type="button">Tamil</button>
+            </div>
         </div>
         <div class="bubbles">
             <img src="../static/images/bubble.png" alt="">
