--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13931,7 +13931,7 @@ iframe {
     background-position: center center;
     position: relative;
     padding: 15em 0;
-    background: #b7c6ca;
+    background: #eeeef0;
   } 
       .ftco-section-parallax .parallax-img .img{
       background-size: cover;
@@ -14067,7 +14067,7 @@ iframe {
 }
 
 .ftco-section-2 {
-  padding: 8em 0;
+  padding-top: 3em;
   position: relative;
 }
 @media (max-width: 767.98px) {
@@ -14306,15 +14306,20 @@ body {
 #customers th {
   /* border: 1px solid #ddd; */
   padding: 8px;
+  color: rgb(36, 35, 35);
   /* border-radius:25px; */
 }
 
 #customers tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: rgb(255, 255, 255);
+}
+
+#customers tr:nth-child(odd) {
+  background-color: rgb(226, 226, 226);
 }
 
 #customers tr:hover {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(131, 131, 131);
   color: #fff;
   transition-delay: 0s;
   transition-duration: 0.8s;
