--- a/templates/loan.html
+++ b/templates/loan.html
@@ -8,6 +8,11 @@
 
     <!-- Link -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@469&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 
     <style>
         
@@ -19,23 +24,21 @@
             width: auto;
             height: auto;
             background-image: url("/../farm_app/pro_farm/static/images/cash.jpg");
+            margin-bottom: 20px;
         }
 
         h2 {
-            border: 2px solid black;
-            /* border-radius: 10px; */
-            position: sticky;
-            top: 0;
-            /* background-color: rgb(121 156 160); */
-            background-color: rgb(255 45 97);
-            width: auto;
-            margin: 20px auto;
-            padding: 20px;
+            border-radius: 10px;
+            background-color: #64d164;
+            margin-bottom: 20px;
+            padding-top: 20px;
+            padding-bottom: 20px;
             text-align: center;
         }
 
         h3 {
             text-align: center;
+            padding-top: 20px;
         }
 
 
@@ -45,10 +48,11 @@
             border: 4px solid black;
             /* border-radius: 20px; */
             /* background-color: #f7ae96; */
-            background-color:  #8fa28f;
+            background-color:  #dfe2df;
             height: auto;
             width: 1000px;
             margin: 0px auto;
+            border-radius: 15px;
         }
 
         .container2 {
@@ -63,95 +67,108 @@
         .container3 {
 
             border-radius: 10px;
-            margin: 4px auto;
             text-align: center;
+            margin-bottom: 20px;
         }
 
         input,
         textarea {
             border: 1px solid black;
             border-radius: 5px;
+            padding-left: 5px;
+            padding-top: 3px;
+            padding-bottom: 3px;
+        }
+        input{
+            margin-left: 20px;
         }
 
         .container3 input:hover {
-            background-color: rgb(121 156 160);
+            background-color: rgb(146, 141, 141);
+            cursor: pointer;
+        }
+        .anchor{
+            padding: 4px;
+            margin: 10px;
+            border: 1px solid black;
+            color: black;
+            border-radius: 5px;
+            background-color: white;;
         }
     </style>
 </head>
 
 <body>
 
-    <h2>AGRICULTURE &nbsp LOAN</h2>
+    <h2>{{ls[0]}}</h2>
 
     <div class="container">
         <div class="container1">
-            <form action="backend.php">
+            <form action="{{url_for('loan_submit')}}" method="POST">
 
                 <!-- PERSONAL INFORMATION START ------------------------------------------------------------------->
 
-                <h3>Personal Information</h3>
+                <h3>{{ls[1]}}</h3>
                 <div class="container2">
 
                     <div>
-                        <label for="myname">FULL NAME:</label>
-                        <input type="text" id="myname">
+                        <label for="myname">{{ls[2]}} : </label>
+                        <input type="text" id="myname" name="name" required>
                     </div>
                     <br>
 
                     <div>
-                        <label for="myfirstname"> FIRST NAME:</label>
-                        <input type="text" id="myfirstname">
-                        <label for="mylastname"> LAST NAME:</label>
-                        <input type="text" id="mylastname">
+                        <label for="myfirstname">{{ls[3]}} : </label>
+                        <input type="text" id="myfirstname" name="name2">
                     </div>
                     <br>
 
                     <div>
-                        <label for="mydob"> DATE OF BIRTH: </label>
-                        <input type="date" id="mydob">
+                        <label for="mydob">{{ls[4]}} : </label>
+                        <input type="date" id="mydob" name="dob" required>
                     </div>
                     <br>
 
 
                     <div>
-                        <label for="mynumber"> MOBILE NUMBER:</label>
-                        <input type="text" id="mynumber">
+                        <label for="mynumber">{{ls[5]}} : </label>
+                        <input type="number" id="mynumber" name="number" required>
                     </div>
                     <br>
 
                     <div>
-                        <label for="myemail"> EMAIL:</label>
-                        <input type="email" id="myemail">
-                    </div>
-                    <br>
-
-                    <div>
-
-                        GENDER: <input type="radio" name="gender" id="mygender">Male &nbsp&nbsp&nbsp&nbsp<input
-                            type="radio" name="gender" id="mygender">Female &nbsp&nbsp&nbsp&nbsp<input type="radio"
-                            name="gender" id="mygender">Other
+                        <label for="myemail">{{ls[6]}} : </label>
+                        <input type="email" id="myemail" name="email">
                     </div>
                     <br>
 
                     <div>
 
-                        MARITAL STATUS: <input type="radio" name="marital" id="mystatus">Single
-                        &nbsp&nbsp&nbsp&nbsp<input type="radio" name="marital">Married &nbsp&nbsp&nbsp&nbsp<input
-                            type="radio" name="marital">Other
+                        {{ls[7]}} : <input type="radio" name="gender" id="mygender" value="male" required>{{ls[8]}} &nbsp&nbsp&nbsp&nbsp<input
+                            type="radio" name="gender" id="mygender" value="female">{{ls[9]}} &nbsp&nbsp&nbsp&nbsp<input type="radio"
+                            name="gender" id="mygender" value="other">{{ls[10]}}
                     </div>
                     <br>
 
                     <div>
-                        <label for="myincome"> ANNUAL INCOME:</label>
-                        <input type="text" id="myincome">
+
+                        {{ls[11]}} : <input type="radio" name="maritial" id="mystatus" value="single" required>{{ls[12]}}
+                        &nbsp&nbsp&nbsp&nbsp<input type="radio" name="maritial" value="married">{{ls[13]}} &nbsp&nbsp&nbsp&nbsp<input
+                            type="radio" name="maritial" value="other">{{ls[14]}}
+                    </div>
+                    <br>
+
+                    <div>
+                        <label for="myincome">{{ls[15]}} : </label>
+                        <input type="number" id="myincome" name="income" required>
                     </div>
                     <br>
 
 
 
                     <div>
-                        <label for="myadd"> PERMANENT ADDRESS:</label><br>
-                        <textarea name="address" id="myadd" cols="150" rows="1"></textarea>
+                        <label for="myadd">{{ls[16]}} : </label><br>
+                        <textarea name="address" id="myadd" cols="100" rows="3" required></textarea>
                     </div>
                     <br>
 
@@ -163,51 +180,52 @@
 
                 <!-- LOAN DETAILS START  ------------------------------------------------------------------->
 
-                <h3>Loan Details</h3>
+                <h3>{{ls[17]}}</h3>
                 <div class="container2">
                     <div>
-                        <label for="mytype"> LOAN TYPE:</label>
-                        <select id="mytype" placeholder="Select">
-                            <option value="type1">Running day to day operations</option>
-                            <option value="type2">Buying farm machinery</option>
-                            <option value="type3">Purchasing Land</option>
-                            <option value="type4">Storage purposes</option>
-                            <option value="type5">Product marketing loans</option>
-                            <option value="type6">Expansion</option>
-                            <option value="type6">Other</option>
+                        <label for="mytype">{{ls[18]}} : </label>
+                        <select name="type" id="mytype" placeholder="Select" style="border-radius: 5px;" required>
+                            <option value="">--{{ls[19]}}--</option>
+                            <option value="{{ls[20]}}">{{ls[20]}}</option>
+                            <option value="{{ls[21]}}">{{ls[21]}}</option>
+                            <option value="{{ls[22]}}">{{ls[22]}}</option>
+                            <option value="{{ls[23]}}">{{ls[23]}}</option>
+                            <option value="{{ls[24]}}">{{ls[24]}}</option>
+                            <option value="{{ls[25]}}">{{ls[25]}}</option>
+                            <option value="{{ls[26]}}">{{ls[26]}}</option>
                         </select>
                     </div>
                     <br>
 
                     <div>
-                        <label for="myarea"> AGRICULTURAL LAND AREA:</label>
-                        <input type="text" id="myarea">
+                        <label for="myarea">{{ls[27]}} : </label>
+                        <input type="text" id="myarea" name="area" required>
                     </div>
                     <br>
 
                     <div>
-                        <label for="mytotalarea"> TOTAL LAND AREA:</label>
-                        <input type="text" id="mytotalarea">
+                        <label for="mytotalarea">{{ls[28]}} : </label>
+                        <input type="text" id="mytotalarea" name="totalarea" required>
                     </div>
                     <br>
 
                     <div>
 
-                        ALREADY HAVE LOAN: <input type="radio" name="myloan"> Yes &nbsp&nbsp&nbsp&nbsp<input
-                            type="radio" name="myloan">No
+                        {{ls[29]}} : <input type="radio" name="myloan" value="yes" required>{{ls[30]}} &nbsp&nbsp&nbsp&nbsp<input
+                            type="radio" name="myloan" value="no">{{ls[31]}}
                     </div>
                     <br>
 
                     <div>
-                        <label for="myamount">AMOUNT REQUIRED:</label>
-                        <input type="text" id="myamount">
+                        <label for="myamount">{{ls[32]}} : </label>
+                        <input type="text" id="myamount" name="amount" required>
                     </div>
                     <br>
 
                     <div>
-                        <label for="mytext"> LOAN REQUIRED FOR:</label>
+                        <label for="mytext">{{ls[33]}} :</label>
                         <br>
-                        <textarea name="text" id="mytext" cols="100" rows="5"></textarea>
+                        <textarea name="text" id="mytext" cols="100" rows="5" required></textarea>
                     </div>
                     <br>
                 </div>
@@ -217,49 +235,28 @@
 
                 <!-- ADDITIONAL DETAILS START ------------------------------------------------------------------->
 
-                <h3>Additional Details</h3>
+                <h3>{{ls[34]}}</h3>
                 <div class="container2">
                     <div>
-                        Is there a criminal record on you? <input type="checkbox"> <br>
-                        Is there pending criminal case on you? <input type="checkbox"><br>
-                        Have you been blacklisted? <input type="checkbox"> If yes, amount <input type="number"><br>
-                        Have you signed a guarantee or surety for an entity? <input type="checkbox">
+                        {{ls[35]}}? <input type="checkbox" name="c1"> <br>
+                        {{ls[36]}}? <input type="checkbox" name="c2"><br>
+                        {{ls[37]}}? <input type="checkbox" name="c3"> {{ls[38]}} <input type="number" name="amount2"><br>
+                        {{ls[39]}}? <input type="checkbox" name="c4">
                     </div>
                     <br>
 
                     <div>
-                        <label for="confirm1"> I authorize prospective credit granters/lending/leasing companies to
-                            obtain
-                            personal and credit
-                            information
-                            about me from credit bureau, or credit reporting agency, any person who has or may have any
-                            financial
-                            dealing with me, or from any refereces i have provided. this information, as well as that
-                            provided
-                            by me
-                            in
-                            the application, will be refered to in connection with this lease or any other relationships
-                            we
-                            may
-                            establish from time to time. Any personal and credit information obtained may be disclosed
-                            from
-                            time
-                            to
-                            time
-                            to the lemders, credit bureaus or other credit reporting agencies.**</label>
+                        <label for="confirm1">{{ls[40]}}**</label>
                         <br>
-                        <input type="radio" id="confirm1">
+                        <input type="radio" id="confirm1" name="confirm1" required>
                     </div>
                     <br>
 
                     <div>
-                        <label for="confirm2">I hereby agree that the information given is true, accurate and complete
-                            as of
-                            the date of this form
-                            submission.**</label>
+                        <label for="confirm2">{{ls[41]}}**</label>
 
                         <br>
-                        <input type="radio" id="confirm2">
+                        <input type="radio" id="confirm2" name="confirm2" required>
                     </div>
                     <br>
                 </div>
@@ -268,8 +265,9 @@
 
                 <div class="container3">
 
-                    <input type="submit" value="SUBMIT NOW">
-                    <input type="reset" value="RESET NOW">
+                    <input type="submit" value="{{t1}}" style="margin-right: 30px;">
+                    <input type="reset" value="{{t2}}" style="margin-right: 30px;">
+                    <a class="anchor" href="{{url_for('user_home_3')}}">{{t3}}</a>
 
                 </div>
 
