added urls to shop now and financial pages

--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -225,31 +225,31 @@
                     </div>
                     <div class="col-md-4 ftco-animate">
                         <div class="blog-entry-2" data-aos-delay="100">
-                            <a href="blog-single.html" class="block-20-1"
+                            <a href="{{url_for('financial')}}" class="block-20-1"
                                 style="background-image: url(../static/images/financial.jpeg);">
                             </a>
                             <div class="text p-4">
                                 <div class="meta mb-3">
-                                    <div><a href="#">{{t_lis[20]}}</a></div>
-                                    <div><a href="#"></a></div>
-                                    <div><a href="#" class="meta-chat"><span class="icon-inr"></span></a></div>
+                                    <div><a href="{{url_for('financial')}}">{{t_lis[20]}}</a></div>
+                                    <div><a href="{{url_for('financial')}}"></a></div>
+                                    <div><a href="{{url_for('financial')}}" class="meta-chat"><span class="icon-inr"></span></a></div>
                                 </div>
-                                <h3 class="heading"><a href="#">{{t_lis[21]}}</a></h3>
+                                <h3 class="heading"><a href="{{url_for('financial')}}">{{t_lis[21]}}</a></h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 ftco-animate">
                         <div class="blog-entry-2" data-aos-delay="100">
-                            <a href="blog-single.html" class="block-20-1"
+                            <a href="{{url_for('shop')}}" class="block-20-1"
                                 style="background-image: url(../static/images/fertilizer-1.jpg);">
                             </a>
                             <div class="text p-4">
                                 <div class="meta mb-3">
-                                    <div><a href="#">{{t_lis[22]}}</a></div>
-                                    <div><a href="#"></a></div>
-                                    <div><a href="#" class="meta-chat"><span class="icon-institution"></span></a></div>
+                                    <div><a href="{{url_for('shop')}}">{{t_lis[22]}}</a></div>
+                                    <div><a href="{{url_for('shop')}}"></a></div>
+                                    <div><a href="{{url_for('shop')}}" class="meta-chat"><span class="icon-institution"></span></a></div>
                                 </div>
-                                <h3 class="heading"><a href="#">{{t_lis[23]}}</a></h3>
+                                <h3 class="heading"><a href="{{url_for('shop')}}">{{t_lis[23]}}</a></h3>
                             </div>
                         </div>
                     </div>
