--- a/templates/shop_now.html
+++ b/templates/shop_now.html
@@ -89,7 +89,7 @@
                         <button type="submit" class="btn btn-dark">Search</button>
                     </div>
                     <div class="myimage-2">
-                        <img src="https://adventures365.in/blog/wp-content/uploads/2016/03/Jal-Mahal-Jaipur.jpg" alt="">
+                        <img src="../static/images/shop_now.jpg" alt="">
                     </div>
                 </div>
             </div>
