--- a/pro_farm/static/css/new_style.css
+++ b/pro_farm/static/css/new_style.css
@@ -1787,5 +1787,16 @@ h1 {
   left: 0px;
 }
 
-/* ---------------------------------
-    la la la ---------------------- */
+/* -----------------------------------
+    index page ---------------------- */
+#vantaBirds{
+  position: absolute;
+  display: block;
+  min-width: 100%;
+  min-height: 100vh;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
