--- a/pro_farm/templates/new_index.html
+++ b/pro_farm/templates/new_index.html
@@ -6,50 +6,281 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Language Select</title>
 
+    <!-- ------------------
+        links --------- -->
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <style>
+        html,
+        body {
+            height: 100%;
+        }
+    
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+    
+        body {
+            font-family: 'Roboto Condensed', sans-serif;
+            line-height: 1.7;
+            perspective-origin: 0% 50%;
+            perspective: 800px;
+            background: #21212d;
+    
+        }
+    
+        nav,
+        main {
+            transition: transform 150ms ease-out;
+        }
+    
+        nav {
+            z-index: 100;
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            width: 16em;
+            background-color: #353441;
+            transform: translateX(-16em);
+        }
+    
+        nav.menu-active {
+            transform: translateX(0);
+        }
+    
+        nav.menu-hover {
+            transform: translateX(-15em);
+        }
+    
+        nav h1 {
+            z-index: 100;
+            display: block;
+            position: absolute;
+            top: 0;
+            right: -65px;
+            height: 60px;
+            width: 65px;
+            line-height: 60px;
+            font-size: 0.8em;
+            font-weight: 300;
+            letter-spacing: 1px;
+            color: #fff;
+            text-transform: uppercase;
+            text-align: center;
+            background-color: #353441;
+            cursor: pointer;
+            border-bottom-right-radius: 10px;
+        }
+    
+        nav h1:hover {
+            color: #e9e8f0;
+            background: rgb(32, 26, 58);
+        }
+    
+        nav ul {
+            margin: 0;
+            padding: 0;
+        }
+    
+        nav li {
+            display: inline-block;
+            padding: 0 1em;
+            width: 100%;
+            height: 60px;
+            color: #9dc6d1;
+            line-height: 60px;
+            background-color: #353441;
+            transition: all 0.5s ease-in;
+        }
+    
+        nav li:nth-of-type(2n) {
+            background-color: #3a3947;
+        }
+    
+        nav li:hover {
+            background: ORANGERED;
+            color: white;
+    
+        }
+    
+        main {
+            z-index: 0;
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+
+        }
+    
+        main:after {
+            content: '';
+            display: block;
+            position: absolute;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            background: linear-gradient(to right, transparent, rgba(33, 33, 45, .5));
+            visibility: hidden;
+            opacity: 0;
+            transition: opacity 150ms ease-out, visibility 0s 150ms;
+        }
+    
+        main.menu-active {
+            border-radius: 0.001px;
+            transform: translateX(16em) rotateY(15deg);
+        }
+    
+        main.menu-active:after {
+            visibility: visible;
+            opacity: 1;
+            transition: opacity 150ms ease-out, visibility 0s;
+        }
+    
+        main.menu-hover {
+            border-radius: 0.001px;
+            transform: translateX(1em) rotateY(1deg);
+        }
+    
+        main section {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            margin: auto;
+            padding: 1em 4em;
+            max-width: 680px;
+            overflow: auto;
+            background-color: rgba(255, 255, 255, .5);
+        }
+    
+        section h1 {
+            font-weight: 800;
+            text-transform: uppercase;
+            font-size: 2em;
+        }
+    
+        section p {
+            display: inline-block;
+            margin: 16px 0;
+        }
+    </style>
     <link rel="stylesheet" href="..\static\css\new_style.css">
     <link rel="stylesheet" href="..\static\css\style.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <!-- =========================================== -->
-    <div class="hero-wrap">
-        <div id="vantaBirds"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6" style="margin: 2em; position: relative; top:200px;">
-                    <h1 style="color:white">Kissan Tech</h1>
-                    <p style="color:white">well rooted to nature</p>
-                </div>
-                <div class="col-md-4" style="position: relative; top:200px;">
-                    <div class="col-md-3"><br></div>
-                    <div class="col-md-3">
-                        <a href="#">
-                            <img src="../static/images/edited_vali4.png"
-                                style="border-radius: 50%; width: 150px; height: 150px;" onclick="openNav()" alt="">
-                        </a>
-                    </div>
-                    <div>
-                        <h2 style="color:white">Name- ooiiii</h2>
-                        <p style="color:white; position:relative; left: 20px;">number - 1234567890</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="container">
-        <div class="row" style="position: relative; top:700px;">
-            <div class="col-md-12 col-sm-12">
-                <h1>wow</h1>
+    <!-- =========================================== -->
+
+
+    <!-- -------------------------------------
+        loader --------------------------- -->
+
+    <!-- =========================================== -->
+
+
+    <!-- -------------------------------------
+        navbar --------------------------- -->
+    <nav class="menu-activea">
+        <h1>KT</h1>
+        <ul>
+            <li>HOME</li>
+            <li>GALLERY</li>
+            <li>TEAM</li>
+            <li>SERVICES</li>
+            <li>ABOUT</li>
+            <li>WORK</li>
+            <li>FAQ</li>
+        </ul>
+    </nav>
+    <!-- =========================================== -->
+
+
+    <!-- ------------------------------------
+        Animation ----------------------- -->
+
+    <main>
+        <div class="hero-wrap">
+            <div id="vantaBirds"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6" style="margin: 2em; position: relative; top:200px;">
+                        <h1 style="color:white">Kissan Tech</h1>
+                        <p style="color:white">well rooted to nature</p>
+                    </div>
+                    <div class="col-md-4" style="position: relative; top:200px;">
+                        <div class="col-md-3"><br></div>
+                        <div class="col-md-3">
+                            <a href="#">
+                                <img src="../static/images/edited_vali4.png"
+                                    style="border-radius: 50%; width: 150px; height: 150px;" onclick="openNav()" alt="">
+                            </a>
+                        </div>
+                        <div>
+                            <h2 style="color:white">Name- ooiiii</h2>
+                            <p style="color:white; position:relative; left: 20px;">number - 1234567890</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+
+
+    <!-- =========================================== -->
+
+
+        <div class="container">
+            <div class="row" style="position: relative; top:700px;">
+                <div class="col-md-12 col-sm-12">
+                    <h1>wow</h1>
+                </div>
+            </div>
+        </div>
+    </main>
+
     <!-- =========================================== -->
     <!-- =========================================== -->
+
 
     <!-- ----------------------
     loading scripts ------- -->
+    <script>
+        (function () {
+            var nav = $('nav'),
+                menu = $('nav h1'),
+                main = $('main'),
+                open = false,
+                hover = false;
+
+            menu.on('click', function () {
+                open = !open ? true : false;
+                nav.toggleClass('menu-active');
+                main.toggleClass('menu-active');
+                nav.removeClass('menu-hover');
+                main.removeClass('menu-hover');
+                console.log(open);
+            });
+            menu.hover(
+                function () {
+                    if (!open) {
+                        nav.addClass('menu-hover');
+                        main.addClass('menu-hover');
+                    }
+                }, function () {
+                    nav.removeClass('menu-hover');
+                    main.removeClass('menu-hover');
+                }
+            );
+        })();
+    </script>
     <script src="https://cdn.jsdelivr.net/gh/tengbao/vanta@master/vendor/three.r119.min.js"></script>
     <script src="..\static\js\vanta.birds.min.js"></script>
     <script>
@@ -68,5 +299,6 @@
     </script>
 
 </body>
-
+<!-- Ayush Malik5:00 PM
+https://code.likeagirl.io/js-set-a-background-using-code-1cc26cf96ce4 -->
 </html>
