modified table for live information of user

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -72,59 +72,24 @@
                 <table id="customers">
                     <tr>
                         <th style="border-top-left-radius: 15px;">Category</th>
-                        <th>Date</th>
+                        <th>Date/Time</th>
                         <th style="border-top-right-radius: 15px;">Status</th>
                     </tr>
+                    {% for i in range(length) %}
                     <tr>
-                        <td>Alfreds Futterkiste</td>
-                        <td>Maria Anders</td>
-                        <td>Germany</td>
+                        <td>{{loan}}</td>
+                        <td>{{date[i]}}, {{time[i]}}</td>
+                        <td>{{status[i]}}</td>
                     </tr>
+                    {% endfor %}
+                    {% for i in range(length2) %}
                     <tr>
-                        <td>Berglunds snabbköp</td>
-                        <td>Christina Berglund</td>
-                        <td>Sweden</td>
+                        <td>{{insu}}</td>
+                        <td>{{date2[i]}}, {{time2[i]}}</td>
+                        <td>{{status2[i]}}</td>
                     </tr>
-                    <tr>
-                        <td>Centro comercial Moctezuma</td>
-                        <td>Francisco Chang</td>
-                        <td>Mexico</td>
-                    </tr>
-                    <tr>
-                        <td>Ernst Handel</td>
-                        <td>Roland Mendel</td>
-                        <td>Austria</td>
-                    </tr>
-                    <tr>
-                        <td>Island Trading</td>
-                        <td>Helen Bennett</td>
-                        <td>UK</td>
-                    </tr>
-                    <tr>
-                        <td>Königlich Essen</td>
-                        <td>Philip Cramer</td>
-                        <td>Germany</td>
-                    </tr>
-                    <tr>
-                        <td>Laughing Bacchus Winecellars</td>
-                        <td>Yoshi Tannamuri</td>
-                        <td>Canada</td>
-                    </tr>
-                    <tr>
-                        <td>Magazzini Alimentari Riuniti</td>
-                        <td>Giovanni Rovelli</td>
-                        <td>Italy</td>
-                    </tr>
-                    <tr>
-                        <td>North/South</td>
-                        <td>Simon Crowther</td>
-                        <td>UK</td>
-                    </tr>
-                    <tr>
-                        <td style="border-bottom-left-radius: 15px;">Paris spécialités</td>
-                        <td>Marie Bertrand</td>
-                        <td style="border-bottom-right-radius: 15px;">France</td>
-                    </tr>
+                    {% endfor %}
+                   
                 </table>
             </div>
         </div>
