--- a/templates/set_password.html
+++ b/templates/set_password.html
@@ -63,7 +63,7 @@
           <br>
           <select class="select-css" onchange="print_city('state', this.selectedIndex);" id="sts" name ="stt" required></select>
           <br>
-          <select class="select-css" id ="state" hidden name="city" required></select>
+          <select class="select-css" id ="state" name="city" required></select>
           <script language="javascript">print_state("sts");</script>
           <br>
           <div class="container-login100-form-btn">
