added routes to insurance form

--- a/templates/financial.html
+++ b/templates/financial.html
@@ -118,16 +118,16 @@
                     </div>
                     <div class="col-md-4 ftco-animate">
                         <div class="blog-entry-2" data-aos-delay="100">
-                            <a href="blog-single.html" class="block-20-1"
+                            <a href="{{url_for('insu')}}" class="block-20-1"
                                 style="background-image: url(../static/images/insur2.jpg);">
                             </a>
                             <div class="text p-4">
                                 <div class="meta mb-3">
-                                    <div><a href="#">{{ls[12]}}</a></div>
-                                    <div><a href="#"></a></div>
-                                    <div><a href="#" class="meta-chat"><span class="icon-inr"></span></a></div>
+                                    <div><a href="{{url_for('insu')}}">{{ls[12]}}</a></div>
+                                    <div><a href="{{url_for('insu')}}"></a></div>
+                                    <div><a href="{{url_for('insu')}}" class="meta-chat"><span class="icon-inr"></span></a></div>
                                 </div>
-                                <h3 class="heading"><a href="#">{{ls[13]}}</a></h3>
+                                <h3 class="heading"><a href="{{url_for('insu')}}">{{ls[13]}}</a></h3>
                             </div>
                         </div>
                     </div>
