Updated the styling in the templates

--- a/pro_farm/templates/new_index.html
+++ b/pro_farm/templates/new_index.html
@@ -133,6 +133,7 @@
         main.menu-active {
             border-radius: 0.001px;
             transform: translateX(16em) rotateY(15deg);
+            background-color: rgba(70, 66, 66, 0.5);
         }
     
         main.menu-active:after {
