--- a/pro_farm/templates/shop_now.html
+++ b/pro_farm/templates/shop_now.html
@@ -36,7 +36,7 @@
                         <li class="nav-item"><a href="about.html" class="nav-link">weather</a></li>
                         <li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
                         <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-                        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                        <li class="nav-item"><a href="contact.html" class="nav-link">Became seller</a></li>
                     </ul>
                 </div>
             </div>
@@ -120,19 +120,18 @@
             </div>
             <div class="row featured__filter">
                 <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat">
-                    <div class="featured__item">
-                        <div class="featured__item__pic set-bg" data-setbg="../static/images/featured/feature-1.jpg">
-                            <ul class="featured__item__pic__hover">
-                                <li class="active"><a href="#"><i class="fa fa-heart"></i></a></li>
-                                <li class="active"><a href="#"><i class="fa fa-retweet"></i></a></li>
-                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                            </ul>
+                    <a href="#" name="what">
+                        <div class="featured__item">
+                            
+                                <div class="featured__item__pic set-bg" data-setbg="../static/images/featured/feature-1.jpg">
+                                </div>
+                            
+                                <div class="featured__item__text">
+                                    <h6>Crab Pool Security</h6>
+                                    <h5>$30.00</h5>
+                                </div>
                         </div>
-                        <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
-                        </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 mix vegetables fastfood">
                     <div class="featured__item">
